footer white space resolved

--- a/dashboard_app/static/css/style.css
+++ b/dashboard_app/static/css/style.css
@@ -5,6 +5,8 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+  background-color: rgb(48, 48, 48);
 }
 
 .header_block {
